# distroless

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _build-debug.yaml  _build-image.yaml  build-all.yaml  build-java.yaml  build-nodejs.yaml  build-python.yaml  ci.yaml  lint.yaml  scheduled-rebuild.yaml  security-scan.yaml
docs/: BUILDING.md  USAGE.md
examples/go/: Dockerfile  go.mod  main.go
examples/java/gradle/: Dockerfile  build.gradle  settings.gradle
examples/java/maven/: Dockerfile  pom.xml
examples/nodejs/npm/: Dockerfile  index.js  package.json
examples/nodejs/pnpm/: Dockerfile  index.js  package.json
examples/python/pip/: Dockerfile  main.py  requirements.txt
examples/python/poetry/: Dockerfile  main.py  pyproject.toml
images/base/: Dockerfile  Dockerfile.debug  Dockerfile.nossl
images/cc/: Dockerfile  Dockerfile.debug
images/debug/: Dockerfile
images/golang/: Dockerfile.cgo  Dockerfile.static
images/java/: Dockerfile.17  Dockerfile.21  Dockerfile.debug
images/nodejs/: Dockerfile.20  Dockerfile.22  Dockerfile.24  Dockerfile.debug
images/python/: Dockerfile.3.10  Dockerfile.3.11  Dockerfile.3.12  Dockerfile.3.13  Dockerfile.3.8  Dockerfile.3.9  Dockerfile.debug
images/static/: Dockerfile  Dockerfile.debug
tests/structure-tests/: base.yaml  cc.yaml  golang.yaml  java.yaml  nodejs.yaml  python.yaml  static-debug.yaml  static.yaml
(+5 files in other folders)
